# api-key-storage

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.svelte  app.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs  models.rs  secrets.rs  storage.rs
src/lib/api/: providers.ts
src/lib/components/: CopyField.svelte  CreateButton.svelte  ProviderCard.svelte  ProviderDetail.svelte  ProviderForm.svelte  ProviderList.svelte  SearchBox.svelte  Toast.svelte
src/lib/stores/: providerStore.ts  toastStore.ts
src/lib/types/: provider.ts
